# automatic_infantry_preparation

binocular_vision/demo/: CMakeLists.txt
binocular_vision/demo/src/: CMakeLists.txt  binocular_vision_01.cpp
