CMAKE_MINIMUM_REQUIRED (VERSION 3.21.3)

FIND_PACKAGE (OpenCV REQUIRED)

AUX_SOURCE_DIRECTORY (. SRC_LIST)

ADD_EXECUTABLE (binocular_vision_demo ${SRC_LIST})

INCLUDE_DIRECTORIES (../include ${OpenCV_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES (binocular_vision_demo ${OpenCV_LIBS})

set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)